# llm-benchmarking

backend/: .env  apptree.json  pyproject.toml  server.py
backend/app/: __init__py  data.json  jailbreak.json  llm_service.py  main.py  system_prompt.txt
backend/app/internal/: config.py  schemas.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Dashboard.jsx  Prompt.jsx  Tests.jsx  Validate.jsx
frontend/src/pages/components/: Card.jsx  List.jsx  ListItem.jsx  PromptBar.jsx
frontend/src/pages/components/graphs/: Line.jsx  Load.jsx  Pie.jsx  Spike.jsx  Times.jsx
frontend/src/pages/components/inputs/: Button.jsx  Dropdown.jsx  TextArea.jsx  TextInput.jsx  UploadFile.jsx  UploadFiles.jsx
frontend/src/pages/components/text/: Bold.jsx  Description.jsx  Heading.jsx  Title.jsx
